@@ -29,6 +29,7 @@ typedef struct parsec_dtd_task_class_s  parsec_dtd_task_class_t;
 extern uint32_t __parsec_dtd_is_initialized; /* flag to indicate whether dtd_init() is called or not */
 extern int hashtable_trace_keyin;
 extern int hashtable_trace_keyout;
+extern int parsec_dtd_debug_output;
 
 /* To flag the task we are trying to complete as a local one */
 #define PARSEC_ACTION_COMPLETE_LOCAL_TASK 0x08000000
